--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@emotion/styled": "^11.11.5",
     "framer-motion": "^11.3.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-lottie-player": "^2.1.0"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
