--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
+    "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+    },
     "extends": "@rocketseat/eslint-config/react"
+    
 }
